Gui: add ViewParams class
A convenience class to obtain common view parameters, analogous to
existing WindowParameter class.

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -1071,6 +1071,7 @@ SET(Widget_CPP_SRCS
     WidgetFactory.cpp
     Widgets.cpp
     Window.cpp
+    ViewParams.cpp
 )
 SET(Widget_HPP_SRCS
     FileDialog.h
@@ -1085,6 +1086,7 @@ SET(Widget_HPP_SRCS
     WidgetFactory.h
     Widgets.h
     Window.h
+    ViewParams.h
 )
 SET(Widget_SRCS
     ${Widget_CPP_SRCS}
