--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -367,6 +367,7 @@ set(Gui_MOC_HDRS
     DAGView/DAGModel.h
     TaskElementColors.h
     DlgObjectSelection.h
+    DlgAddProperty.h
     ${FreeCADGui_SDK_MOC_HDRS}
 )
 
@@ -441,6 +442,7 @@ SET(Gui_UIC_SRCS
     TaskView/TaskSelectLinkProperty.ui
     TaskElementColors.ui
     DlgObjectSelection.ui
+    DlgAddProperty.ui
 )
 
 SET(Gui_RES_SRCS
@@ -516,6 +518,7 @@ SET(Dialog_CPP_SRCS
     DocumentRecovery.cpp
     TaskElementColors.cpp
     DlgObjectSelection.cpp
+    DlgAddProperty.cpp
 )
 
 SET(Dialog_HPP_SRCS
@@ -551,6 +554,7 @@ SET(Dialog_HPP_SRCS
     DocumentRecovery.h
     TaskElementColors.h
     DlgObjectSelection.h
+    DlgAddProperty.h
 )
 
 SET(Dialog_SRCS
@@ -564,6 +568,7 @@ SET(Dialog_SRCS
     DlgAuthorization.ui
     DlgDisplayProperties.ui
     DlgInputDialog.ui
+    DlgAddProperty.ui
     DlgLocationAngle.ui
     DlgLocationPos.ui
     DlgMacroExecute.ui
